Beginning of a glorious new era of re-com based input. Add movies to a screening!!

--- a/resources/public/html/layout.html
+++ b/resources/public/html/layout.html
@@ -1,70 +1,73 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Midnight Movies Minneapolis</title>
-        <link rel="stylesheet" href="/stylesheets/normalize.css">
-        <link rel="stylesheet" href="/stylesheets/mmm.css">
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/ui-lightness/jquery-ui.css">
-	<link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
-        <link rel="icon"
-              type="image/png"
-              href="/favicon.png">
-    </head>
-    <body>
-        <div  class="grid-container">
-            <header>
-                <h1>Midnight Movies Minneapolis</h1>
+  <head>
+    <meta charset="utf-8">
+    <title>Midnight Movies Minneapolis</title>
+    <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <link rel="stylesheet" href="/stylesheets/mmm.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/ui-lightness/jquery-ui.css">
+    <link rel="stylesheet" href="/stylesheets/unsemantic-grid-responsive.css">
+    <link rel="icon"
+    type="image/png"
+    href="/favicon.png">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/vendor/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="/vendor/css/re-com.css">
 
-                <ul class="social-media">
-                    <li>
-                        <a href="https://www.facebook.com/midnightmoviesmpls">
-                            <img src="/facebook.png">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/MidniteMoviesTC">
-                            <img src="/twitter.png">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://eepurl.com/bkOPiD">
-                            <img src="/email.png">
-                        </a>
-                    </li>
-                </ul>
+  </head>
+  <body>
+    <div  class="grid-container">
+      <header>
+      <h1>Midnight Movies Minneapolis</h1>
 
-            </header>
+      <ul class="social-media">
+        <li>
+        <a href="https://www.facebook.com/midnightmoviesmpls">
+          <img src="/facebook.png">
+        </a>
+        </li>
+        <li>
+        <a href="https://twitter.com/MidniteMoviesTC">
+          <img src="/twitter.png">
+        </a>
+        </li>
+        <li>
+        <a href="http://eepurl.com/bkOPiD">
+          <img src="/email.png">
+        </a>
+        </li>
+      </ul>
 
-            <nav class="grid-100">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/screenings/">All Screenings</a></li>
-            </nav>
+      </header>
 
-            <main>
-            </main>
+      <nav class="grid-100">
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/screenings/">All Screenings</a></li>
+      </nav>
 
-
-
-            <footer>
-                <p>© 2013 [Chris] Dale</p>
-                <a href="/admin">admin</p>
-                <a class="issue" href="https://gitreports.com/issue/CaptainLexington/mmm">Bugs? Suggestions?</a>
-            </footer>
-        </div>
+      <main>
+      </main>
 
 
-        <script type="text/javascript" src="/scripts/main.js"></script>
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                                    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-            ga('create', 'UA-22242573-1', 'auto');
-            ga('send', 'pageview');
+      <footer>
+      <p>© 2013 [Chris] Dale</p>
+      <a href="/admin">admin</p>
+        <a class="issue" href="https://gitreports.com/issue/CaptainLexington/mmm">Bugs? Suggestions?</a>
+        </footer>
+      </div>
 
-        </script>
+
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-22242573-1', 'auto');
+        ga('send', 'pageview');
+
+      </script>
     </body>
-</html>
+  </html>
