--- a/resources/public/html/screening.html
+++ b/resources/public/html/screening.html
@@ -3,7 +3,7 @@
         <h2><span class="title"></span></h2>
         <section class="movie">
             <img class="poster"/>
-            <p= class="release"></p>
+            <p class="release"></p>
             <p class="director"></p>
             <p class="rating"></p>
             <p class="runningTime"> minutes</p>
@@ -81,6 +81,9 @@
 
 
 <div class="add screening">
+  <div id="app">
+    </div>
+    <!--
     <form method="post">
         <div class="film">
             <label for="name">Film(s):</label>
@@ -167,6 +170,8 @@
             <button class="submit" type="submit">Add Screening</button>
         </div>
         <a class="delete">Delete</a>
-    </form>
+          </form> -->
 
+    <script type="text/javascript" src="/scripts/main.js"></script>
+    <script>mmm.core.init();</script>
 </div>
